--- a/app/modules/companies/templates/companies/users.html
+++ b/app/modules/companies/templates/companies/users.html
@@ -31,9 +31,9 @@
                             <label class="form-check-label" for="role-manage-offers">إدارة العروض</label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="roles" value="view_usage_codes"
-                                id="role-view-usage-codes">
-                            <label class="form-check-label" for="role-view-usage-codes">عرض رمز التفعيل</label>
+                            <input class="form-check-input" type="checkbox" name="roles" value="manage_usage_codes"
+                                id="role-manage-usage-codes">
+                            <label class="form-check-label" for="role-manage-usage-codes">إدارة أكواد الاستخدام</label>
                         </div>
                         <div class="form-text">اختر صلاحية واحدة على الأقل لإنشاء المستخدم.</div>
                     </div>
