--- a/app/modules/companies/templates/companies/base.html
+++ b/app/modules/companies/templates/companies/base.html
@@ -112,6 +112,7 @@
                         </a>
                     </li>
                     {% endif %}
+                    {% if current_user.normalized_role != 'company_staff' %}
                     <li class="nav-item">
                         <a class="nav-link {% if current_path.startswith(url_for('company_portal.company_users')) %}active{% endif %}"
                             href="{{ url_for('company_portal.company_users') }}">
@@ -137,6 +138,7 @@
                             </span>
                         </a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </aside>
@@ -200,6 +202,7 @@
             <span class="company-mobile-nav__label">العروض</span>
         </a>
         {% endif %}
+        {% if current_user.normalized_role != 'company_staff' %}
         <a class="company-mobile-nav__item {% if current_path.startswith(url_for('company_portal.company_messages_list')) %}company-mobile-nav__item--active{% endif %}"
             href="{{ url_for('company_portal.company_messages_list') }}">
             <span class="company-mobile-nav__icon position-relative">
@@ -222,6 +225,7 @@
             <span class="company-mobile-nav__icon"><i class="fas fa-gear"></i></span>
             <span class="company-mobile-nav__label">الإعدادات</span>
         </a>
+        {% endif %}
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='companies/js/company_sidebar_toggle.js') }}" defer></script>
